--- a/speed_challenge_local/train_car_speed.ipynb
+++ b/speed_challenge_local/train_car_speed.ipynb
@@ -2,134 +2,113 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "alex output shape :  torch.Size([20, 5, 68096])\n",
-      "lstm input shape :  torch.Size([20, 5, 68096])\n",
-      "lstm output shape :  torch.Size([20, 5, 420])\n",
-      "fc input shape :  torch.Size([20, 5, 420])\n",
-      "fc output shape :  torch.Size([20, 5, 1])\n",
-      "predict shape :  torch.Size([5, 20])\n",
-      "label shape :  torch.Size([5, 20])\n",
-      "------ PREDICT start------\n",
-      "Variable containing:\n",
-      "\n",
-      "Columns 0 to 9 \n",
-      "-0.0528 -0.0501 -0.0402 -0.0523 -0.0621 -0.0595 -0.0522 -0.0737 -0.0703 -0.0833\n",
-      "-0.0471 -0.0651 -0.0431 -0.0461 -0.0311 -0.0459 -0.0753 -0.0618 -0.0606 -0.0591\n",
-      "-0.0712 -0.0484 -0.0675 -0.0762 -0.1137 -0.1128 -0.1082 -0.0889 -0.0826 -0.0643\n",
-      "-0.0564 -0.0493 -0.0523 -0.0535 -0.0248 -0.0460 -0.0164 -0.0562 -0.0058 -0.0080\n",
-      "-0.0124 -0.0393 -0.0627 -0.0125 -0.0547 -0.0464 -0.0008  0.0056 -0.0288  0.0058\n",
-      "\n",
-      "Columns 10 to 19 \n",
-      "-0.0611 -0.1059 -0.0296 -0.0478 -0.0294 -0.0522 -0.0313 -0.0440 -0.0868 -0.0727\n",
-      "-0.0761 -0.0386 -0.0445 -0.0430 -0.0440 -0.0684 -0.0480 -0.0490 -0.0517 -0.0413\n",
-      "-0.0493 -0.0591 -0.0417 -0.0398 -0.0327 -0.0565 -0.0492 -0.0566 -0.0476 -0.0583\n",
-      "-0.0317  0.0135  0.0052  0.0144 -0.0335 -0.0157  0.0121  0.0069 -0.0086 -0.0323\n",
-      "-0.0011 -0.0230 -0.0320  0.0121  0.0092 -0.0230 -0.0261 -0.0169 -0.0199 -0.0384\n",
-      "[torch.FloatTensor of size 5x20]\n",
-      "\n",
-      "------ PREDICT   end------\n",
-      "------ LABEL start------\n",
-      "Variable containing:\n",
-      "\n",
-      "Columns 0 to 7 \n",
-      " 23.7977  23.8030  23.7634  23.7408  23.7485  23.7302  23.7225  23.7596\n",
-      " 22.1017  22.0899  22.0946  22.1009  22.1331  22.1295  22.1285  22.1316\n",
-      " 23.1955  23.1986  23.1778  23.1909  23.1582  23.1545  23.1550  23.1566\n",
-      " 10.2629  10.2523  10.2366  10.2256  10.2060  10.2517  10.2481  10.2546\n",
-      "  0.0000   0.0000   0.0000   0.0000   0.0000   0.0000   0.0000   0.0000\n",
-      "\n",
-      "Columns 8 to 15 \n",
-      " 23.7733  23.7687  23.7962  23.7112  23.7490  23.7786  23.7066  23.7289\n",
-      " 22.1397  22.1694  22.1637  22.1714  22.1532  22.1598  22.1616  22.1647\n",
-      " 23.1535  23.1393  23.1316  23.1098  23.1124  23.1186  23.0947  23.1041\n",
-      " 10.2446  10.2236  10.2407  10.2160  10.2733  10.2622  10.2390  10.2707\n",
-      "  0.0000   0.0000   0.0000   0.0000   0.0000   0.0000   0.0000   0.0000\n",
-      "\n",
-      "Columns 16 to 19 \n",
-      " 23.7767  23.7398  23.8036  23.7915\n",
-      " 22.1452  22.1567  22.1887  22.1860\n",
-      " 23.0928  23.0831  23.0794  23.0975\n",
-      " 10.2346  10.3163  10.3035  10.3088\n",
-      "  0.0000   0.0000   0.0000   0.0000\n",
-      "[torch.FloatTensor of size 5x20]\n",
-      "\n",
-      "------ LABEL   end------\n",
-      "loss shape :  torch.Size([1])\n",
-      "[epoch : 1, iteration :     1] loss: 17.038\n",
-      "alex output shape :  torch.Size([20, 5, 68096])\n",
-      "lstm input shape :  torch.Size([20, 5, 68096])\n",
-      "lstm output shape :  torch.Size([20, 5, 420])\n",
-      "fc input shape :  torch.Size([20, 5, 420])\n",
-      "fc output shape :  torch.Size([20, 5, 1])\n",
-      "predict shape :  torch.Size([5, 20])\n",
-      "label shape :  torch.Size([5, 20])\n",
-      "------ PREDICT start------\n",
-      "Variable containing:\n",
-      "\n",
-      "Columns 0 to 9 \n",
-      "1.00000e-02 *\n",
-      " -2.9419 -1.1506  0.4786 -3.2445 -2.5512 -1.9053 -2.2838 -2.9580  1.2749  2.9013\n",
-      " -2.3398  0.5294 -0.8830  0.9502 -2.2809  0.9397  1.1955  1.1065 -0.2597 -0.8233\n",
-      " -1.7397 -0.3231 -1.8443  0.9279  1.5639  0.5024  0.0568 -1.2840  1.3397  1.0318\n",
-      " -2.7001 -1.7140 -2.6222 -1.4101 -1.0902  1.6425 -0.4025 -1.9546 -1.6979 -4.8396\n",
-      " -2.3948 -2.8800 -1.7671 -0.4877 -1.9008 -2.4158 -1.2932  0.3418 -0.6612  0.3314\n",
-      "\n",
-      "Columns 10 to 19 \n",
-      "1.00000e-02 *\n",
-      "  2.3140  1.3816  1.4546 -2.8071  0.8286  1.1481  0.0914  0.2749 -0.4845 -1.8232\n",
-      "  0.7370 -1.0479  0.4548 -2.3986 -1.1396  1.6432  0.5309  2.1774 -2.9574  2.7147\n",
-      "  1.1378 -1.1237  4.2003  1.3516  2.8667  2.1824  1.3941 -1.3314 -3.3127  0.4655\n",
-      " -3.8829 -2.4132 -2.1215 -5.0300 -2.3122 -3.1867 -4.5833 -6.0297 -4.0965 -2.1551\n",
-      " -2.5041 -0.2861  0.8089  2.2310 -1.5101 -2.3358 -1.2323 -3.7746  2.0809  1.6547\n",
-      "[torch.FloatTensor of size 5x20]\n",
-      "\n",
-      "------ PREDICT   end------\n",
-      "------ LABEL start------\n",
-      "Variable containing:\n",
-      "\n",
-      "Columns 0 to 7 \n",
-      "  0.0000   0.0000   0.0000   0.0000   0.0000   0.0000   0.0000   0.0000\n",
-      " 22.5021  22.5005  22.4498  22.4556  22.4346  22.4405  22.4240  22.4349\n",
-      " 15.4385  15.3760  15.3690  15.3670  15.3092  15.2903  15.2258  15.2357\n",
-      "  7.5188   7.5210   7.5559   7.6107   7.6242   7.6311   7.6669   7.6642\n",
-      " 23.3975  23.3966  23.4136  23.4375  23.4628  23.4868  23.5042  23.5002\n",
-      "\n",
-      "Columns 8 to 15 \n",
-      "  0.0000   0.0000   0.0000   0.0000   0.0000   0.0000   0.0000   0.0000\n",
-      " 22.4350  22.4165  22.4209  22.4150  22.3853  22.3983  22.4321  22.4217\n",
-      " 15.1932  14.9519  15.0435  15.0575  15.1418  15.2234  15.0948  14.9416\n",
-      "  7.6747   7.6616   7.6578   7.6733   7.6892   7.6877   7.6695   7.6700\n",
-      " 23.5174  23.5237  23.5285  23.5780  23.5857  23.5624  23.6193  23.6138\n",
-      "\n",
-      "Columns 16 to 19 \n",
-      "  0.0000   0.0000   0.0000   0.0000\n",
-      " 22.4289  22.3878  22.3735  22.3829\n",
-      " 14.8621  15.0404  14.8629  14.9014\n",
-      "  7.6318   7.5851   7.4815   7.5116\n",
-      " 23.6144  23.6359  23.6621  23.6473\n",
-      "[torch.FloatTensor of size 5x20]\n",
-      "\n",
-      "------ LABEL   end------\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-61-3068178f26eb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    122\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"------ LABEL   end------\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    123\u001b[0m         \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 124\u001b[0;31m         \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    125\u001b[0m         \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    126\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniconda3/envs/carnd-term1/lib/python3.5/site-packages/torch/autograd/variable.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph, retain_variables)\u001b[0m\n\u001b[1;32m    165\u001b[0m                 \u001b[0mVariable\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    166\u001b[0m         \"\"\"\n\u001b[0;32m--> 167\u001b[0;31m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_variables\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    168\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    169\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniconda3/envs/carnd-term1/lib/python3.5/site-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(variables, grad_variables, retain_graph, create_graph, retain_variables)\u001b[0m\n\u001b[1;32m     97\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     98\u001b[0m     Variable._execution_engine.run_backward(\n\u001b[0;32m---> 99\u001b[0;31m         variables, grad_variables, retain_graph)\n\u001b[0m\u001b[1;32m    100\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    101\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "15459 2.232426\n",
+      "15460 2.128592\n",
+      "15461 2.037299\n",
+      "15462 2.062311\n",
+      "15463 1.986056\n",
+      "15464 1.879097\n",
+      "15465 1.91522\n",
+      "15466 1.817642\n",
+      "15467 1.729141\n",
+      "15468 1.753493\n",
+      "15469 1.668238\n",
+      "15470 1.638134\n",
+      "15471 1.634793\n",
+      "15472 1.533554\n",
+      "15473 1.51216\n",
+      "15474 1.500449\n",
+      "15475 1.452962\n",
+      "15476 1.448734\n",
+      "15477 1.421214\n",
+      "15478 1.329434\n",
+      "2968 22.17625\n",
+      "2969 22.133444\n",
+      "2970 22.149298\n",
+      "2971 22.100728\n",
+      "2972 22.060368\n",
+      "2973 21.988514\n",
+      "2974 21.975832\n",
+      "2975 21.958813\n",
+      "2976 21.906158\n",
+      "2977 21.90997\n",
+      "2978 21.863792\n",
+      "2979 21.854736\n",
+      "2980 21.83847\n",
+      "2981 21.78667\n",
+      "2982 21.804916\n",
+      "2983 21.792359\n",
+      "2984 21.774163\n",
+      "2985 21.761638\n",
+      "2986 21.775377\n",
+      "2987 21.753186\n",
+      "8837 10.205999\n",
+      "8838 10.182577\n",
+      "8839 10.158643\n",
+      "8840 10.182892\n",
+      "8841 10.127035\n",
+      "8842 10.115971\n",
+      "8843 10.113069\n",
+      "8844 10.082145\n",
+      "8845 10.039093\n",
+      "8846 10.041261\n",
+      "8847 10.026185\n",
+      "8848 9.975841\n",
+      "8849 9.951443\n",
+      "8850 9.945091\n",
+      "8851 9.940427\n",
+      "8852 9.886067\n",
+      "8853 9.888366\n",
+      "8854 9.881791\n",
+      "8855 9.856683\n",
+      "8856 9.843443\n",
+      "12782 9.374195\n",
+      "12783 9.299342\n",
+      "12784 9.301712\n",
+      "12785 9.17977\n",
+      "12786 9.229411\n",
+      "12787 9.136078\n",
+      "12788 9.112845\n",
+      "12789 9.13455\n",
+      "12790 9.063305\n",
+      "12791 9.066781\n",
+      "12792 9.052585\n",
+      "12793 9.046257\n",
+      "12794 9.039394\n",
+      "12795 9.025224\n",
+      "12796 8.90991\n",
+      "12797 8.835087\n",
+      "12798 8.793431\n",
+      "12799 8.8036\n",
+      "12800 8.808343\n",
+      "12801 8.777193\n",
+      "17069 1.714856\n",
+      "17070 1.734268\n",
+      "17071 1.773591\n",
+      "17072 1.889902\n",
+      "17073 1.883502\n",
+      "17074 1.993563\n",
+      "17075 2.109367\n",
+      "17076 2.066758\n",
+      "17077 2.213218\n",
+      "17078 2.32716\n",
+      "17079 2.50344\n",
+      "17080 2.466929\n",
+      "17081 2.58477\n",
+      "17082 2.720589\n",
+      "17083 2.670654\n",
+      "17084 2.877819\n",
+      "17085 2.974744\n",
+      "17086 2.9482\n",
+      "17087 3.056305\n",
+      "17088 3.087244\n"
      ]
     }
    ],
@@ -198,16 +177,11 @@
     "            V(weight.new(self.n_layers, b_size, self.h_size).normal_(0.0, 0.01))\n",
     "        )\n",
     "    \n",
-    "net = AlexLSTM()\n",
-    "# print(net)\n",
-    "\n",
     "batch_size = 5\n",
     "time_stamp = 20\n",
     "train_dataset = os.listdir(\"../img/\")\n",
     "total_img_num = len(train_dataset)\n",
     "iteration_per_epoch = int(total_img_num / (batch_size*time_stamp))\n",
-    "lr = 0.0001\n",
-    "criterion = nn.MSELoss(False)\n",
     "\n",
     "def fetch_image_and_label(batch_size, time_stamp):\n",
     "    numbers = []\n",
@@ -229,52 +203,60 @@
     "            img = cv2.imread(image_path)\n",
     "            x[i,j] = img\n",
     "            y[i,j] = label[numbers[i] + j]\n",
-    "    \n",
+    "            \n",
+    "            print(img_name, y[i,j])\n",
     "    x = x.transpose(0, 4, 1, 2, 3) # (batch_size, 3, time_stamp, 480, 640)\n",
     "    return x, y\n",
-    "    \n",
-    "min_loss = 100\n",
-    "for epoch in range(20):  # loop over the dataset multiple times\n",
-    "    running_loss = 0.0\n",
-    "    for i in range(iteration_per_epoch):\n",
-    "        x,y = fetch_image_and_label(batch_size, time_stamp)\n",
     "\n",
-    "        # wrap them in Variable\n",
-    "        x = V(th.from_numpy(x).float())\n",
-    "        y = V(th.from_numpy(y).float())\n",
-    "\n",
-    "        optimizer = optim.Adam(net.parameters(), lr=lr)\n",
-    "        optimizer.zero_grad()# zero the parameter gradients\n",
-    "        # forward + backward + optimize\n",
-    "        predict = net(x)\n",
-    "        \n",
-    "        print(\"predict shape : \", predict.size())\n",
-    "        print(\"label shape : \", y.size())\n",
-    "        print(\"------ PREDICT start------\")\n",
-    "        print(predict)\n",
-    "        print(\"------ PREDICT   end------\")\n",
-    "        print(\"------ LABEL start------\")\n",
-    "        print(y)\n",
-    "        print(\"------ LABEL   end------\")\n",
-    "        loss = criterion(predict, y)\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "\n",
-    "        # print statistics\n",
-    "        print(\"loss shape : \",loss.data.size())\n",
-    "        running_loss += loss.data[0]\n",
-    "        if running_loss <= min_loss :\n",
-    "            min_loss = running_loss\n",
-    "            print(\"Saving model ...\")\n",
-    "            th.save(net.state_dict(), '../weight/%d_%s.p' % (i, epoch))\n",
-    "        print('[epoch : %d, iteration : %5d] loss: %.3f' % (epoch + 1, i + 1, running_loss / 2000))\n",
+    "def train():\n",
+    "    net = AlexLSTM()\n",
+    "    criterion = nn.MSELoss(False)\n",
+    "    lr = 0.0001\n",
+    "    min_loss = 100\n",
+    "    for epoch in range(20):  # loop over the dataset multiple times\n",
     "        running_loss = 0.0\n",
-    "    print(\"Saving model ...\")\n",
-    "    th.save(net.state_dict(), '../weight/epoch_%s.p' % (epoch))\n",
+    "        for i in range(iteration_per_epoch):\n",
+    "            x,y = fetch_image_and_label(batch_size, time_stamp)\n",
     "\n",
-    "print('Finished Training')\n",
+    "            # wrap them in Variable\n",
+    "            x = V(th.from_numpy(x).float())\n",
+    "            y = V(th.from_numpy(y).float())\n",
     "\n",
-    "\n"
+    "            optimizer = optim.Adam(net.parameters(), lr=lr)\n",
+    "            optimizer.zero_grad()# zero the parameter gradients\n",
+    "            # forward + backward + optimize\n",
+    "            predict = net(x)\n",
+    "\n",
+    "            print(\"predict shape : \", predict.size())\n",
+    "            print(\"label shape : \", y.size())\n",
+    "            print(\"------ PREDICT start------\")\n",
+    "            print(predict)\n",
+    "            print(\"------ PREDICT   end------\")\n",
+    "            print(\"------ LABEL start------\")\n",
+    "            print(y)\n",
+    "            print(\"------ LABEL   end------\")\n",
+    "            loss = criterion(predict, y)\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "\n",
+    "            # print statistics\n",
+    "            print(\"loss shape : \",loss.data.size())\n",
+    "            running_loss += loss.data[0]\n",
+    "            if running_loss <= min_loss :\n",
+    "                min_loss = running_loss\n",
+    "                print(\"Saving model ...\")\n",
+    "                th.save(net.state_dict(), '../weight/%d_%s.p' % (i, epoch))\n",
+    "            print('[epoch : %d, iteration : %5d] loss: %.3f' % (epoch + 1, i + 1, running_loss / 2000))\n",
+    "            running_loss = 0.0\n",
+    "        print(\"Saving model ...\")\n",
+    "        th.save(net.state_dict(), '../weight/epoch_%s.p' % (epoch))\n",
+    "\n",
+    "    print('Finished Training')\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "#     train()\n",
+    "    fetch_image_and_label(batch_size, time_stamp)"
    ]
   },
   {
