--- a/generate_video.ipynb
+++ b/generate_video.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-3-4c1186ce510f>, line 55)",
+     "evalue": "invalid syntax (<ipython-input-4-40ef22389845>, line 55)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-4c1186ce510f>\"\u001b[0;36m, line \u001b[0;32m55\u001b[0m\n\u001b[0;31m    challenge_clip = clip3.\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-40ef22389845>\"\u001b[0;36m, line \u001b[0;32m55\u001b[0m\n\u001b[0;31m    challenge_clip = clip3.(process_image)\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -69,8 +69,7 @@
     "        line = fp.readline()\n",
     "print(len(lines))\n",
     "cn = 0\n",
-    "challenge_clip = clip3.\n",
-    "(process_image)\n",
+    "challenge_clip = clip3.fl_image(process_image)\n",
     "%time challenge_clip.write_videofile(challenge_output, audio=False)"
    ]
   },
