clean up code and file name

--- a/tools/clean_up_predict_result.ipynb
+++ b/tools/clean_up_predict_result.ipynb
@@ -10836,7 +10836,7 @@
    ],
    "source": [
     "speeds = []\n",
-    "with open('result_2.txt') as fp:\n",
+    "with open('../result_2.txt') as fp:\n",
     "    line = fp.readline()\n",
     "    cn = 0\n",
     "    while line:\n",
@@ -10845,7 +10845,7 @@
     "        speeds.append(line.split(\" \")[1])\n",
     "        line = fp.readline()\n",
     "        \n",
-    "with open('result_2_clean.txt', 'a') as result:\n",
+    "with open('../result_2_clean.txt', 'a') as result:\n",
     "    for i in range(len(speeds)):\n",
     "        result.write(speeds[i])"
    ]
