--- a/tools/generate_video.ipynb
+++ b/tools/generate_video.ipynb
@@ -167,13 +167,7 @@
       " 28%|██▊       | 1665/6001 [00:17<00:39, 111.04it/s]\u001b[A\n",
       " 28%|██▊       | 1677/6001 [00:17<00:39, 108.90it/s]\u001b[A\n",
       " 28%|██▊       | 1689/6001 [00:17<00:40, 107.22it/s]\u001b[A\n",
-      " 28%|██▊       | 1700/6001 [00:17<00:50, 85.68it/s] \u001b[A\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      " 28%|██▊       | 1700/6001 [00:17<00:50, 85.68it/s] \u001b[A\n",
       " 29%|██▊       | 1712/6001 [00:17<00:46, 93.12it/s]\u001b[A\n",
       " 29%|██▊       | 1723/6001 [00:17<00:50, 85.55it/s]\u001b[A\n",
       " 29%|██▉       | 1735/6001 [00:17<00:46, 90.95it/s]\u001b[A\n",
@@ -475,13 +469,7 @@
       " 77%|███████▋  | 4611/6001 [00:51<00:14, 95.92it/s] \u001b[A\n",
       " 77%|███████▋  | 4622/6001 [00:51<00:14, 93.80it/s]\u001b[A\n",
       " 77%|███████▋  | 4634/6001 [00:51<00:13, 99.90it/s]\u001b[A\n",
-      " 77%|███████▋  | 4645/6001 [00:51<00:13, 100.07it/s]\u001b[A\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      " 77%|███████▋  | 4645/6001 [00:51<00:13, 100.07it/s]\u001b[A\n",
       " 78%|███████▊  | 4656/6001 [00:52<00:13, 100.48it/s]\u001b[A\n",
       " 78%|███████▊  | 4667/6001 [00:52<00:13, 96.99it/s] \u001b[A\n",
       " 78%|███████▊  | 4677/6001 [00:52<00:13, 96.06it/s]\u001b[A\n",
@@ -668,16 +656,16 @@
     "    cn = cn + 1\n",
     "    return image_1\n",
     "    \n",
-    "challenge_output = 'data/test_output.mp4'\n",
+    "challenge_output = '../data/test_output.mp4'\n",
     "## To speed up the testing process you may want to try your pipeline on a shorter subclip of the video\n",
     "## To do so add .subclip(start_second,end_second) to the end of the line below\n",
     "## Where start_second and end_second are integer values representing the start and end of the subclip\n",
     "## You may also uncomment the following line for a subclip of the first 5 seconds\n",
     "# clip3 = VideoFileClip('test_videos/challenge.mp4').subclip(0,5)\n",
-    "clip3 = VideoFileClip('data/test.mp4').subclip(0, 300)\n",
+    "clip3 = VideoFileClip('../data/test.mp4').subclip(0, 300)\n",
     "\n",
     "lines = []\n",
-    "with open('result_2_clean.txt') as fp:\n",
+    "with open('../result_2_clean.txt') as fp:\n",
     "    line = fp.readline()\n",
     "    while line:\n",
     "        lines.append(line)\n",
