--- a/tools/capture_image_from_video_local.ipynb
+++ b/tools/capture_image_from_video_local.ipynb
@@ -11010,18 +11010,18 @@
     "\n",
     "print(cv2.__version__)\n",
     "def write_video_to_images():\n",
-    "    vidcap = cv2.VideoCapture('data/test.mp4')\n",
+    "    vidcap = cv2.VideoCapture('../data/test.mp4')\n",
     "    success,image = vidcap.read()\n",
     "    count = 0\n",
     "    success = True\n",
     "    while success:\n",
     "      success,image = vidcap.read()\n",
     "      print('Read a new frame: ', success)\n",
-    "      cv2.imwrite(\"img_test/frame%d.jpg\" % count, image)     # save frame as JPEG file\n",
+    "      cv2.imwrite(\"../img_test/frame%d.jpg\" % count, image)     # save frame as JPEG file\n",
     "      count += 1\n",
     "\n",
     "def crop_image():\n",
-    "    bgr_img = cv2.imread('img/frame0.jpg')\n",
+    "    bgr_img = cv2.imread('../img/frame0.jpg')\n",
     "    \n",
     "    b,g,r = cv2.split(bgr_img)       # get b,g,r\n",
     "    rgb_img = cv2.merge([r,g,b])     # switch it to rgb\n",
